Fixed CSS Bugging out due to too much variable computing

--- a/tipsy-react/src/index.css
+++ b/tipsy-react/src/index.css
@@ -30,7 +30,7 @@ html {
     padding: 0;
     font-family: 'Roboto Mono', monospace;
     color: white !important;
-    background: linear-gradient( rgba(var(--background-color), 0.5) 100%, rgba(var(--background-color), 0.8)100%),url("../src/assets/bg.jpg");
+    background: linear-gradient( rgba(25,7,4, 0.5) 100%, rgba(25,7,4, 0.8)100%),url("../src/assets/bg.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
